# WppTerminalClient

./: .gitignore
wpp-client/: CMakeLists.txt  main.cpp
wpp-client/configuration/: databaseconnection.cpp  databaseconnection.h  signalmanager.cpp  signalmanager.h
wpp-client/core/: ViewType.h  application.cpp  application.h
wpp-client/model/entity/: Entity.h  MESSAGE_TYPE.h  PRIMARY_KEY_TYPE.h  contact.cpp  contact.h  conversation.cpp  conversation.h  group.cpp  group.h  message.cpp  message.h
wpp-client/repository/: contactrepository.cpp  contactrepository.h  conversationrepository.cpp  conversationrepository.h  grouprepository.cpp  grouprepository.h  messagerepository.cpp  messagerepository.h
wpp-client/service/: wppconnectorservice.cpp  wppconnectorservice.h
wpp-client/util/: IObserver.h  OBSERVABLE_COMMAND.h  Observable.h  utilalghoritms.cpp  utilalghoritms.h
wpp-client/view/: IView.h  chat.cpp  chat.h  login.cpp  login.h
wpp-socket/: index.js  package-lock.json  package.json  wpp.js
